[package]
name = "storus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

prost = "0.12.4"
tonic-build = "0.11.0"
log = "0.4.20"
tonic = { version = "0.11.0", features = ["tls"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

protobuf = "3.4.0"
grpcio = "0.13.0"

[build-dependencies]
tonic-build = "0.11.0"



