[package]
name = "storus"
version = "0.1.4"
edition = "2021"
authors = ["Israel Mwangoka <israelmwangoka@hotmail.com>"]
description = "SDK for accessing StooKV datastore."
readme = "README.md"
repository = "https://github.com/mwangox/storus"
documentation = "https://docs.rs/storus"
license = "MIT"
license-file = "MIT-LICENSE"
keywords = ["stoo", "stookv", "storus", "sto", "kv"]
exclude = ["src/main.rs", "src/ca_cert.pem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
tonic-build = "0.11.0"
log = "0.4.20"
tonic = { version = "0.11.0", features = ["tls"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

protobuf = "3.4.0"
grpcio = "0.13.0"

[build-dependencies]
tonic-build = "0.11.0"



